plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.citi'
version = '0.0.1-SNAPSHOT'
description = 'AI-Driven Cascading Impact Analysis'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    google()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.slf4j:slf4j-simple:2.0.7'

    // Example 2: If you added slf4j-simple directly or via a core module
    implementation('org.slf4j:slf4j-simple:2.0.7') // Remove this line if you added it manually!

    // Recommended Broad Exclusion (if still failing, this can force it out)
    configurations.all {
        exclude group: 'org.slf4j', module: 'slf4j-simple'
    }

    // --- Git Operations (JGit) ---
    // The library for interacting with Git repositories
    implementation 'org.eclipse.jgit:org.eclipse.jgit:6.10.0.202406032230-r'

    // --- Code Parsing (JavaParser) ---
    // Core library for parsing Java source files into Abstract Syntax Trees (AST)
    implementation 'com.github.javaparser:javaparser-core:3.25.10'
    implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.25.10'

    // --- AI API Interaction (JSON Handling) ---
    // We'll use Gson for simple JSON serialization/deserialization when calling the Gemini API
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
    implementation 'com.fasterxml.jackson.module:jackson-module-jsonSchema:2.17.0'

    // --- Google GenAI SDK (Latest version) ---
    implementation 'com.google.genai:google-genai:1.23.0'

    // Remove or comment out Vertex AI if using GenAI SDK
    // implementation 'com.google.cloud:google-cloud-aiplatform:3.79.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    implementation 'org.mockito:mockito-core:5.10.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
